Organized code, added javadocs to all methods, removed unnecessary/outdated code/comments. Fixed errors with javadocs, exported.
Signed-off-by: engelsteve0 <engelsteve0@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <junit.version>5.8.2</junit.version>
     </properties>
-
+    <parent>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx</artifactId>
+        <version>18.0.1</version>
+    </parent>
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
